:sparkles: Inscription + vue

--- a/resources/views/layouts/app.edge
+++ b/resources/views/layouts/app.edge
@@ -7,9 +7,9 @@
   @entryPointStyles('app')
   @entryPointScripts('app')
 </head>
-<body>
+<body class="bg-grey-700 dark:bg-zinc-900">
 @include('partials/header')
-<main class="font-sans">
+<main class="font-sans ">
   @!section('content')
 </main>
 </body>
