--- a/resources/views/partials/header.edge
+++ b/resources/views/partials/header.edge
@@ -2,12 +2,12 @@
 dark:border-b dark:border-white">
   <div>
     {{--<img src="{{ asset('assets/images/logo.svg') }}" alt="Lézard" class="h-12">--}}
-    <h1 class="text-2xl font-semibold hidden md:block">Reptiles Stats</h1>
+    <a href="/" class="text-2xl font-semibold hidden md:block">Reptiles Stats</a>
   </div>
   <div class="grow flex flex-col md:flex-row md:justify-end">
     <a href="/" class="px-4 py-2 text-sm hover:rounded hover:bg-emerald-600 hover:text-white">Accueil</a>
     @if(auth.user)
-      <form action="#" method="POST">
+      <form action="{{ route('AuthController.logout') }}?_method=DELETE" method="POST">
         @elements.button({ type: 'submit' , class: "px-4 py-2 text-sm hover:rounded hover:bg-emerald-600 hover:text-white"})
         Déconnexion ({{ auth.user.pseudo }})
         @end
