:recycle: Suppression de tailwind et config de sass

--- a/resources/views/layouts/app.edge
+++ b/resources/views/layouts/app.edge
@@ -7,9 +7,9 @@
   @entryPointStyles('app')
   @entryPointScripts('app')
 </head>
-<body class="bg-grey-700 dark:bg-zinc-900">
+<body class="theme-dark">
 @include('partials/header')
-<main class="font-sans ">
+<main>
   @!section('content')
 </main>
 </body>
