--- a/resources/views/pages/home.edge
+++ b/resources/views/pages/home.edge
@@ -1,5 +1,26 @@
 @layout('layouts/app')
 
 @section('content')
-  <p>Hello World</p>
+  <section class="">
+    <header>
+      <h1 class="">Bienvenue sur Reptiles Stats</h1>
+      <p class="">Reptiles
+        Stats est l’endroit fournissant de nombreuses informations sur les espèces de NAC et
+        vous fournit une interface de suivi de vos élevages.
+      </p>
+    </header>
+    <div class="">
+      <div class="">
+        <div>
+          <h2 class="">Des données réelles.</h2>
+          <p class="">Pour vous fournir ses fiches d’élevage, <strong
+              class="">Reptile Stats</strong> est en
+            collaboration avec différents éleveurs professionnels et reconnu dans le monde des reptiles.
+          </p>
+        </div>
+        <div>2</div>
+      </div>
+    </div>
+
+  </section>
   @end
