--- a/resources/views/partials/header.edge
+++ b/resources/views/partials/header.edge
@@ -1,11 +1,10 @@
-<nav class="flex flex-row items-center px-6 py-4 dark:bg-zinc-900 dark:text-white bg-gray-200 sticky mb-12
-dark:border-b dark:border-white">
+<nav class="">
   <div>
     {{--<img src="{{ asset('assets/images/logo.svg') }}" alt="Lézard" class="h-12">--}}
-    <a href="/" class="text-2xl font-semibold hidden md:block">Reptiles Stats</a>
+    <a href="/" class="">Reptiles Stats</a>
   </div>
-  <div class="grow flex flex-col md:flex-row md:justify-end">
-    <a href="/" class="px-4 py-2 text-sm hover:rounded hover:bg-emerald-600 hover:text-white">Accueil</a>
+  <div class="">
+    <a href="/" class="">Accueil</a>
     @if(auth.user)
       <form action="{{ route('AuthController.logout') }}?_method=DELETE" method="POST">
         @elements.button({ type: 'submit' , class: "px-4 py-2 text-sm hover:rounded hover:bg-emerald-600 hover:text-white"})
@@ -13,9 +12,9 @@ dark:border-b dark:border-white">
         @end
       </form>
     @else
-      <a href="/connexion" class="px-4 py-2 text-sm hover:rounded hover:bg-emerald-600 hover:text-white">Connexion</a>
+      <a href="/connexion" class="">Connexion</a>
       <a href="/inscription"
-         class="px-4 py-2 text-sm hover:rounded hover:bg-emerald-600 hover:text-white">Inscription</a>
+         class="">Inscription</a>
       @end
   </div>
 
