:lipstick: Styles nav

--- a/resources/views/layouts/app.edge
+++ b/resources/views/layouts/app.edge
@@ -7,7 +7,7 @@
   @entryPointStyles('app')
   @entryPointScripts('app')
 </head>
-<body class="theme-dark">
+<body class="">
 @include('partials/header')
 <main>
   @!section('content')
