--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -10,11 +10,15 @@
   --rs-font-family-primary: "Poppins, sans-serif";
   --rs-font-family-alt: "Montserrat, sans-serif";
   --rs-text-primary: #27272A;
+  --rs-bg-nav: #E9EAED;
   --rs-error: #DC2626;
+  --rs-green: #16A34A;
+  --rs-space: 8px;
 }
 
 @include dark() {
-  --rs-body-color: #27272A;
+  --rs-body-color: #111318;
+  --rs-bg-nav: #1E212A;
   --rs-text-primary: #FFFFFF;
 }
 
@@ -52,3 +56,5 @@ img {
 
 @import "modules/btn";
 @import "modules/input";
+/* COMPONENTS */
+@import "components/nav";
