--- a/resources/css/tools/_functions.scss
+++ b/resources/css/tools/_functions.scss
@@ -21,5 +21,5 @@
   // Espacements
   // ==================
   @function space($i) {
-    @return calc(#{$i} * var(--space));
+    @return calc(#{$i} * var(--rs-space));
   }
