--- a/resources/css/modules/_btn.scss
+++ b/resources/css/modules/_btn.scss
@@ -1,6 +1,6 @@
-%btn {
+%btn, .btn {
   position: relative;
-  display: inline-block;
+  display: inline-flex;
   align-items: center;
   justify-content: center;
   box-sizing: border-box;
@@ -14,22 +14,19 @@
   line-height: 1.75;
   font-weight: 500;
   min-width: 64px;
-  padding: 3px 9px;
+  padding: 6px 12px;
   border-radius: 4px;
-  font-family: "Montserrat", sans-serif;
+  font-family: var(--rs-font-family-primary);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms, box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms, border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms, color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
   box-shadow: none;
 }
 
-.btn {
+.btn-contained.btn-primary {
   @extend %btn;
-}
-
-.btn.contained.primary {
   background-color: #3d5afe;
 }
 
-.btn.contained.primary:hover {
+.btn-contained.btn-primary:hover {
   background-color: rgb(42, 62, 177);
 }
 
@@ -40,50 +37,19 @@
   color: #3d5afe;
 }
 
-.btn-custom-outlined.secondary {
+.btn-contained.btn-lg {
+  font-size: 1rem;
+  padding: 12px 18px;
+}
+
+.btn-outlined.btn-secondary {
   @extend %btn;
   background-color: transparent;
   border: 1px solid #FF4D4D;
   color: var(--red);
 }
 
-.btn.outlined.primary {
-  @extend %btn;
-  display: block;
-  border: 1px solid #3d5afe;
-  color: #3d5afe;
-}
-
-.btn-custom-outlined.secondary:hover {
-  background-color: rgba(#FF4D4D, 0.1);
-  border-color: var(--red);
-}
-
-.btn.outlined.primary:hover {
-  background-color: rgba(61, 90, 254, 0.08);
-}
-
-.btn-custom-outlined:hover {
-  text-decoration: none;
-  background-color: rgba(61, 90, 254, 0.08);
-  border: 1px solid #3d5afe;
-}
-
-.btn-add-task {
-  @extend %btn;
-  font-size: .875rem;
-  font-weight: 500;
-  background: var(--red);
-  padding: 6px 10px;
-  width: 100%;
-  box-shadow: var(--box-shadow);
-}
-
-.btn-add-task:hover {
-  background: darken(#FF4D4D, 3);
-}
-
-.btn-outlined-success {
+.btn-outlined.btn-success {
   @extend %btn;
   font-size: .875rem;
   color: #28c76f;
@@ -91,11 +57,7 @@
   border: solid 1px #28c76f;
 }
 
-.btn-outlined-success:hover {
-  background-color: rgba(40, 199, 111, .05);
-}
-
-.btn-outlined-disabled {
+.btn-outlined.btn-disabled {
   @extend %btn;
   font-size: .875rem;
   border: 1px solid #82868b;
