--- a/resources/css/tools/_layouts.scss
+++ b/resources/css/tools/_layouts.scss
@@ -48,12 +48,14 @@
   padding-left: calc(var(--space) * 4);
   padding-right: calc(var(--space) * 4);
 }
+
 @include down(400) {
   .container-fluid {
     padding-left: calc(var(--space) * 2);
     padding-right: calc(var(--space) * 2);
   }
 }
+
 %container-margin {
   margin-left: auto;
   margin-right: auto;
@@ -210,6 +212,11 @@
 // =============
 .mla {
   margin-left: auto;
+}
+
+.mx-auto {
+  margin-left: auto;
+  margin-right: auto;
 }
 
 @for $i from 0 through 5 {
