--- a/resources/views/auth/register.edge
+++ b/resources/views/auth/register.edge
@@ -1,60 +1,60 @@
 @layout('layouts/app')
 
 @section('content')
-  <form action="{{ route('AuthController.register') }}" method="POST" class="max-w-2xl mx-auto">
+  <form action="{{ route('AuthController.register') }}" method="POST" class="register-form">
     <div class="grid grid-cols-2 gap-5">
-      @form.group({name: 'pseudo', class: "flex flex-col mb-6"})
-      @!form.label({title: "Pseudo", class: "mb-1.5 block text-sm font-medium text-gray-700 dark:text-white"})
-      @!form.input({type: "text", class: 'border px-4 py-2 rounded-md focus:border-sky-700 '})
+      @form.group({name: 'pseudo', class: "input-group mb3"})
+      @!form.label({title: "Pseudo", class: "label-field"})
+      @!form.input({type: "text", class: 'field-outlined full-width'})
       @end
-      @form.group({name: 'email', class: "flex flex-col mb-6"})
-      @!form.label({title: "E-mail", class: "mb-1.5 block text-sm font-medium text-gray-700 dark:text-white"})
-      @!form.input({type: "email", class: 'border px-4 py-2 rounded-md focus:border-sky-700 '})
+      @form.group({name: 'email', class: "input-group mb3"})
+      @!form.label({title: "E-mail", class: "label-field"})
+      @!form.input({type: "email", class: 'field-outlined full-width'})
       @end
     </div>
-    <div class="grid grid-cols-2 gap-5">
-      @form.group({name: 'password' , class: "flex flex-col mb-6"})
-      @!form.label({title: "Mot de passe", class: "mb-1.5 block text-sm font-medium text-gray-700 dark:text-white"})
-      @!form.input({type: "password", class: 'border px-4 py-2 rounded-md focus:border-sky-700 '})
+    <div>
+      @form.group({name: 'password' , class: "input-group mb3"})
+      @!form.label({title: "Mot de passe", class: "label-field"})
+      @!form.input({type: "password", class: 'field-outlined full-width'})
       @end
-      @form.group({name: 'password_confirmation' , class: "flex flex-col mb-1"})
-      @!form.label({title: "Confirmer votre mot de passe", class: "mb-1.5 block text-sm font-medium text-gray-700 dark:text-white"})
-      @!form.input({type: "password", class: 'border px-4 py-2 rounded-md focus:border-sky-700 mb-2'})
-      @end
-    </div>
-    <div class="grid grid-cols-2 gap-5">
-      @form.group({name: 'region' , class: "flex flex-col mb-6"})
-      @!form.label({title: "Dans quel régions êtes vous ?", class: "mb-1.5 block text-sm font-medium text-gray-700 dark:text-white"})
-      @!form.input({type: "text", class: 'border px-4 py-2 rounded-md focus:border-sky-700 '})
-      @end
-      @form.group({name: 'city' , class: "flex flex-col mb-1"})
-      @!form.label({title: "Dans quelle ville élevez-vous vos reptiles", class: "mb-1.5 block text-sm font-medium text-gray-700 dark:text-white"})
-      @!form.input({type: "text", class: 'border px-4 py-2 rounded-md focus:border-sky-700'})
+      @form.group({name: 'password_confirmation' , class: "input-group mb3"})
+      @!form.label({title: "Confirmer votre mot de passe", class: "label-field"})
+      @!form.input({type: "password", class: 'field-outlined full-width'})
       @end
     </div>
-    <div class="grid grid-cols-2 gap-5">
-      @form.group({name: 'postal_code' , class: "flex flex-col mb-6"})
-      @!form.label({title: "Code postal", class: "mb-1.5 block text-sm font-medium text-gray-700 dark:text-white"})
-      @!form.input({type: "text", class: 'border px-4 py-2 rounded-md focus:border-sky-700 '})
+    <div>
+      @form.group({name: 'region' , class: "input-group mb3"})
+      @!form.label({title: "Dans quel régions êtes vous ?", class: "label-field"})
+      @!form.input({type: "text", class: 'field-outlined full-width'})
+      @end
+      @form.group({name: 'city' , class: "input-group mb3"})
+      @!form.label({title: "Dans quelle ville élevez-vous vos reptiles", class: "label-field"})
+      @!form.input({type: "text", class: 'field-outlined full-width'})
+      @end
+    </div>
+    <div>
+      @form.group({name: 'postal_code' , class: "input-group mb3"})
+      @!form.label({title: "Code postal", class: "label-field"})
+      @!form.input({type: "text", class: 'field-outlined full-width'})
       @end
       <div>
         <span class="mb-4 block text-sm font-medium text-gray-700 dark:text-white">Êtes-vous capacitaire ?</span>
-        <div class="flex flex-row">
-          <div class="flex flex-row mr-4">
-            <input type="radio" name="capacity" value="true" class="mb-1.5 block text-sm font-medium text-gray-700
-        dark:text-white mr-2">
-            <label for="capacity" class="mb-1.5 block text-sm font-medium text-gray-700 dark:text-white">Oui</label>
+        <div class="input-group mb3">
+          <div class="">
+            <input type="radio" name="capacity" value="true" class="">
+            <label for="capacity" class="label-field">Oui</label>
           </div>
-          <div class="flex flex-row ml-2">
-            <input type="radio" name="capacity" value="false" class="mb-1.5 block text-sm font-medium text-gray-700
-        dark:text-white mr-2" checked>
-            <label for="#" class="mb-1.5 block text-sm font-medium text-gray-700 dark:text-white">Non</label>
+          <div class="">
+            <input type="radio" name="capacity" value="false" class="" checked>
+            <label for="#" class="">Non</label>
           </div>
         </div>
       </div>
     </div>
-    @elements.button({type: 'submit', class: "transition duration-250 ease-out hover:ease-in bg-blue-500 hover:bg-blue-600 px-4 py-2 rounded-md text-white text-md semibold mt-2"})
-    Inscription
-    @end
+    <div class="container-btn">
+      @elements.button({type: 'submit', class: "btn-contained btn-primary btn-lg"})
+      Inscription
+      @end
+    </div>
   </form>
   @end
