:lipstick: Style page connexion / inscription

--- a/resources/views/auth/login.edge
+++ b/resources/views/auth/login.edge
@@ -12,8 +12,10 @@
       @!form.input({type: "password", class: 'field-outlined full-width'})
       @end
     </div>
-    @elements.button({type: 'submit', class: "btn-contained btn-primary btn-lg"})
-    Se connecter
-    @end
+    <div class="container-btn">
+      @elements.button({type: 'submit', class: "btn-contained btn-primary btn-lg"})
+      Se connecter
+      @end
+    </div>
   </form>
   @end
