--- a/resources/css/pages/auth/login.scss
+++ b/resources/css/pages/auth/login.scss
@@ -2,7 +2,7 @@
   max-width: 390px;
   margin: space(10) auto;
   background: var(--rs-body-color-alt);
-  padding: space(6) space(4);
+  padding: space(3);
   border-radius: 4px;
   box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.2), 0 4px 6px -4px rgb(0 0 0 / 0.1);
 }
@@ -19,7 +19,7 @@
   max-width: 800px;
 }
 
-.register-form .container-btn{
+.register-form .container-btn, .login-form .container-btn{
   display: flex;
   justify-content: center;
   grid-column: 1 / 3;
