--- a/resources/views/pages/home.edge
+++ b/resources/views/pages/home.edge
@@ -1,24 +1,31 @@
 @layout('layouts/app')
 
 @section('content')
-  <section class="">
-    <header>
-      <h1 class="">Bienvenue sur Reptiles Stats</h1>
-      <p class="">Reptiles
+  <section class="container">
+    <header class="header-section">
+      <h1 class="section-title text-center mt6 mb4">Bienvenue sur Reptiles Stats</h1>
+      <p class="paragraph" style="max-width: 866px; margin: auto;">Reptiles
         Stats est l’endroit fournissant de nombreuses informations sur les espèces de NAC et
         vous fournit une interface de suivi de vos élevages.
       </p>
     </header>
-    <div class="">
-      <div class="">
-        <div>
-          <h2 class="">Des données réelles.</h2>
-          <p class="">Pour vous fournir ses fiches d’élevage, <strong
-              class="">Reptile Stats</strong> est en
-            collaboration avec différents éleveurs professionnels et reconnu dans le monde des reptiles.
-          </p>
-        </div>
-        <div>2</div>
+    <div class="layout-grid mt3">
+      <div>
+        <h2 class="subtitle mb1">Des données réelles.</h2>
+        <p class="paragraph">
+          Pour vous fournir ses fiches d’élevage, <strong class="">Reptile Stats</strong> est en
+          collaboration avec différents éleveurs professionnels et reconnu dans le monde des reptiles.
+        </p>
+      </div>
+      <div>
+        <h2 class="subtitle mb1">De cette manière, vous obtenez des fiches avec de vraies données issues de vrais
+          animaux proposant :</h2>
+        <ul class="list-services">
+          <li>Les courbes de poids et de tailles en fonction de l’espèce</li>
+          <li>Les types de proies donnés en fonction de l’âge des spécimens</li>
+          <li>Les conditions de reproductions et un accès aux jeunes bientôt à la vente</li>
+          <li>Un accès en consultation à chaque fiche d’élevage des spécimens suivis</li>
+        </ul>
       </div>
     </div>
 
