:lipstick: Style responsive de la page d'inscription

--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -65,4 +65,5 @@ img {
 @import "components/nav";
 /* PAGES */
 @import "./pages/auth/login";
+@import "./pages/auth/register";
 @import "./pages/home/home";
