--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -63,6 +63,7 @@ img {
 @import "modules/input";
 /* COMPONENTS */
 @import "components/nav";
+@import "components/menuList";
 /* PAGES */
 @import "./pages/auth/login";
 @import "./pages/auth/register";
