--- a/resources/css/components/nav.scss
+++ b/resources/css/components/nav.scss
@@ -1,7 +1,7 @@
 .main-nav {
   display: flex;
   align-items: center;
-  padding: space(2) space(4);
+  padding: space(2);
   background: var(--rs-bg-nav);
 }
 
@@ -14,8 +14,11 @@
   align-items: center;
   padding: space(1);
   border-radius: 50%;
-  transition: background-color .4s;
+}
 
+#icon-menu{
+  transition: background-color .4s;
+  min-width: 0;
   &:hover {
     background-color: rgba(#9CA3AF, .2);
   }
