--- a/resources/views/partials/header.edge
+++ b/resources/views/partials/header.edge
@@ -2,8 +2,10 @@
   <div class="container-nav-logo">
     {{--<img src="{{ asset('assets/images/logo.svg') }}" alt="Lézard" class="h-12">--}}
     <a href="/" class="logo-nav">Reptiles Stats</a>
-    @icons.barsIcon({class: "nav-icon-menu", id:"icon-menu"})
-    @end
+    <button id="icon-menu">
+      @icons.barsIcon({class: "nav-icon-menu"})
+      @end
+    </button>
   </div>
   <ul class="nav-lists">
     @if(auth.user)
