--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -64,6 +64,7 @@ img {
 /* COMPONENTS */
 @import "components/nav";
 @import "components/menuList";
+@import "components/tabs";
 /* PAGES */
 @import "./pages/auth/login";
 @import "./pages/auth/register";
