--- a/resources/views/profil/index.edge
+++ b/resources/views/profil/index.edge
@@ -7,26 +7,34 @@
     </h1>
 
     <nav-tabs class="tabs-container">
-      <a href="#generale" aria-selected="true">Générale</a>
-      <a href="#tab2">tab2</a>
-      <a href="#tab3">tab3</a>
+      <a href="#general" aria-selected="true">Général</a>
+      <a href="#notification">Notifications</a>
+      <a href="#security">Sécurité du compte</a>
+      <a href="#liste-specimens">Listes de vos spécimens</a>
+      <a href="#anciens-specimens">Anciens spécimens</a>
     </nav-tabs>
-    <div style="position: relative">
-
-      <div id="generale">
+    <div class="content-tab">
+      <div id="general">
         tab1
       </div>
-      <div id="tab2" hidden="hidden">
+      <div id="notification" hidden="hidden">
         tabs2
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. A accusamus dignissimos dolorem doloremque, eligendi
-        fugiat hic impedit in ipsam mollitia nesciunt odit praesentium quibusdam sapiente sequi soluta veritatis
         voluptates voluptatum?
       </div>
-      <div id="tab3" hidden="hidden">
+      <div id="security" hidden="hidden">
+        tabs 3
+        Lorem ipsum dolm?
+      </div>
+      <div id="liste-specimens" hidden="hidden">
+        tabs 3
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. A accusamus dignissimos dolorem doloremque, eligendi
+        voluptates voluptatum?
+      </div>
+      <div id="anciens-specimens" hidden="hidden">
         tabs 3
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. A accusamus dignissimos dolorem doloremque, eligendi
         fugiat hic impedit in ipsam mollitia nesciunt odit praesentium quibusdam sapiente sequi soluta veritatis
-        voluptates voluptatum?
       </div>
 
     </div>
