--- a/resources/css/modules/_btn.scss
+++ b/resources/css/modules/_btn.scss
@@ -30,11 +30,16 @@
   background-color: rgb(42, 62, 177);
 }
 
-.btn-custom-outlined {
+.btn-outlined {
   @extend %btn;
   background-color: transparent;
   border: 1px solid rgba(61, 90, 254, 0.5);
-  color: #3d5afe;
+  color: var(--rs-text-primary);
+  transition: background-color 250ms ease-in-out;
+
+  &:hover{
+    background-color: rgba(61, 90, 254, 0.2);
+  }
 }
 
 .btn-contained.btn-lg {
