:sparkles: vu général du profil utilisateur

--- a/resources/views/profil/index.edge
+++ b/resources/views/profil/index.edge
@@ -13,9 +13,9 @@
       <a href="#liste-specimens">Listes de vos spécimens</a>
       <a href="#anciens-specimens">Anciens spécimens</a>
     </nav-tabs>
-    <div class="content-tab">
+    <div class="content-tab mb4">
       <div id="general">
-        tab1
+        @include('components/profil/general')
       </div>
       <div id="notification" hidden="hidden">
         tabs2
