:sparkles: vu notification du compte

--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -73,6 +73,7 @@ img {
 @import "./pages/auth/register";
 @import "./pages/home/home";
 @import "./pages/profil/general";
+@import "./pages/profil/notification";
 
 .rounded {
   height: 45px;
