:sparkles: vu changement mot de passe du compte

--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -74,6 +74,7 @@ img {
 @import "./pages/home/home";
 @import "./pages/profil/general";
 @import "./pages/profil/notification";
+@import "./pages/profil/security";
 
 .rounded {
   height: 45px;
