--- a/resources/views/profil/index.edge
+++ b/resources/views/profil/index.edge
@@ -21,8 +21,7 @@
         @include('components/profil/notification')
       </div>
       <div id="security" hidden="hidden">
-        tabs 3
-        Lorem ipsum dolm?
+        @include('components/profil/security')
       </div>
       <div id="liste-specimens" hidden="hidden">
         tabs 3
